--- a/app/src/main/res/layout/activity_edit_home.xml
+++ b/app/src/main/res/layout/activity_edit_home.xml
@@ -109,6 +109,7 @@
                 android:inputType="textMultiLine"
                 android:background="@drawable/edit_text_border"
                 android:textColor="#8c8c8c"
+                android:gravity="top"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
