--- a/app/src/main/res/layout/activity_edit_contact.xml
+++ b/app/src/main/res/layout/activity_edit_contact.xml
@@ -5,14 +5,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/eggshell"
-    tools:context=".AddWorkActivity">
+    tools:context=".EditHomeActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginVertical="10dp"
         app:cardCornerRadius="30dp"
-        app:layout_constraintBottom_toTopOf="@+id/addWorkBtn"
+        app:layout_constraintBottom_toTopOf="@+id/btnSaveContact"
         app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -26,200 +26,184 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="24dp"
-                android:text="Add a Work"
+                android:text="Edit"
                 android:textColor="@color/turquoise"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/tvJobRole"
+                android:id="@+id/tvMobile"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="16dp"
-                android:text="Job Role"
+                android:text="Mobile Phone"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
             <EditText
-                android:id="@+id/etJobRole"
+                android:id="@+id/etMobile"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:backgroundTint="@color/dark_cyan"
-                android:drawableRight="@drawable/ic_baseline_person"
+                android:drawableRight="@drawable/ic_baseline_call_24"
                 android:textSize="15sp"
-                android:inputType="textEmailAddress"
+                android:inputType="phone"
                 android:textColor="#8c8c8c"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvJobRole" />
+                app:layout_constraintTop_toBottomOf="@+id/tvMobile" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
-                android:text="Experience"
+                android:text="Contact Page"
                 android:textColor="@color/dark_cyan"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView" />
 
             <TextView
-                android:id="@+id/tvCompNm"
+                android:id="@+id/tvEditEmail"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="26dp"
                 android:layout_marginTop="8dp"
-                android:text="Company Name"
+                android:text="Email Address"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etJobRole" />
+                app:layout_constraintTop_toBottomOf="@+id/etMobile" />
 
             <EditText
-                android:id="@+id/etCompNm"
+                android:id="@+id/etEmail"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:backgroundTint="@color/dark_cyan"
-                android:drawableRight="@drawable/ic_baseline_apartment_24"
                 android:textSize="15sp"
                 android:inputType="textEmailAddress"
                 android:textColor="#8c8c8c"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvCompNm" />
+                app:layout_constraintTop_toBottomOf="@+id/tvEditEmail" />
+
+            <TextView
+                android:id="@+id/tvEditLinkedIn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:text="Linked In"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etEmail" />
 
             <EditText
-                android:id="@+id/etStartDt"
+                android:id="@+id/etLinkedIn"
                 android:layout_width="0dp"
                 android:layout_height="50dp"
                 android:layout_marginStart="24dp"
                 android:layout_marginEnd="24dp"
                 android:backgroundTint="@color/dark_cyan"
-                android:drawableRight="@drawable/ic_baseline_date_range_24"
-                android:textSize="15sp"
-                android:inputType="textPersonName"
-                android:textColor="#8c8c8c"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvStartDt" />
-
-            <TextView
-                android:id="@+id/tvStartDt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="8dp"
-                android:text="Start Date"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etCompNm" />
-
-            <EditText
-
-                android:id="@+id/etEndDt"
-                android:layout_width="0dp"
-                android:layout_height="50dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:backgroundTint="@color/dark_cyan"
-                android:drawableRight="@drawable/ic_baseline_date_range_24"
-                android:textSize="15sp"
-                android:inputType="textPersonName"
-                android:textColor="#8c8c8c"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvEndDt" />
-
-            <TextView
-
-                android:id="@+id/tvEndDt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="24dp"
-                android:layout_marginTop="8dp"
-                android:text="End Date"
-                android:textColor="@color/black"
-                android:textSize="12sp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etStartDt" />
-
-            <EditText
-
-                android:id="@+id/etWorkDesc"
-                android:layout_width="0dp"
-                android:layout_height="100dp"
-                android:layout_marginStart="24dp"
-                android:layout_marginEnd="24dp"
-                android:gravity="top"
-                android:backgroundTint="@color/dark_cyan"
-                android:background="@drawable/edit_text_border"
-                android:drawableRight="@drawable/ic_baseline_work_24"
                 android:textSize="15sp"
                 android:inputType="textMultiLine"
                 android:textColor="#8c8c8c"
+                android:gravity="top"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="1.0"
+                app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvWorkDesc" />
+                app:layout_constraintTop_toBottomOf="@+id/tvEditLinkedIn" />
 
             <TextView
-                android:id="@+id/tvWorkDesc"
+                android:id="@+id/tvGithub"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="24dp"
                 android:layout_marginTop="8dp"
-                android:text="Work Description"
+                android:text="Github"
                 android:textColor="@color/black"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etEndDt" />
+                app:layout_constraintTop_toBottomOf="@+id/etLinkedIn" />
+
+            <EditText
+                android:id="@+id/etGithub"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:backgroundTint="@color/dark_cyan"
+                android:textSize="15sp"
+                android:inputType="textMultiLine"
+                android:textColor="#8c8c8c"
+                android:gravity="top"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvGithub" />
+
+
+            <TextView
+                android:id="@+id/tvmedium"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="8dp"
+                android:text="Medium"
+                android:textColor="@color/black"
+                android:textSize="12sp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/etGithub" />
+
+            <EditText
+                android:id="@+id/etmedium"
+                android:layout_width="0dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginEnd="24dp"
+                android:backgroundTint="@color/dark_cyan"
+                android:textSize="15sp"
+                android:inputType="textMultiLine"
+                android:textColor="#8c8c8c"
+                android:gravity="top"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tvmedium" />
+
 
 
             <ImageView
                 android:id="@+id/imageView9"
-                android:layout_width="124dp"
-                android:layout_height="160dp"
+                android:layout_width="114dp"
+                android:layout_height="142dp"
                 android:src="@drawable/resume"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/etWorkDesc" />
+                app:layout_constraintTop_toBottomOf="@+id/etmedium" />
 
-            <ProgressBar
-                android:id="@+id/progressBar"
-                style="?android:attr/progressBarStyle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:visibility="invisible"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
     <Button
-        android:id="@+id/addWorkBtn"
+        android:id="@+id/btnSaveContact"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@drawable/btn_background"
-        android:text="Add Work Experience"
-        android:onClick="addWork"
+        android:text="Save"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
